# kakitori

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/commands/: add-feature.md  analyze-impact.md  analyze.md  backlog.md  commit.md  decision.md  dependencies.md  design-feature.md  features.md  implement-feature.md  plan-feature.md  record-learnings.md  review-code.md  spec-feature.md  vision.md
.github/workflows/: publish.yml  release.yml
designs/: CORE-001.md  PROCESS-001.md  RECORD-001.md
docs/: command-guidance.md  framework.md  learnings.md
docs/architecture/: ADR-001-subcommand-architecture.md  ADR-002-multi-source-configuration.md  ADR-003-pulseaudio-null-sink-mixing.md  ADR-004-multi-turn-transcription.md  README.md
docs/design/: DES-001-lazy-command-imports.md  DES-002-atomic-file-operations.md  DES-003-ffmpeg-graceful-stop.md  DES-004-layered-cleanup.md  DES-005-adaptive-snippet-duration.md  DES-006-paginated-menu-ui.md  README.md
docs/feature-designs/: CORE-001.md  PROCESS-001.md  PROCESS-002.md  RECORD-001.md
docs/feature-specs/: CORE-001.md  PROCESS-001.md  PROCESS-002.md  RECORD-001.md
docs/planning/: BACKLOG.md  DEPENDENCIES.md  FEATURES.md  VISION.md
docs/templates/: ADR.md  DEPENDENCIES.md  DES.md  FEATURES.md  VISION.md  feature-spec.md  implementation-plan.md
planning/: BACKLOG.md  DEPENDENCIES.md  FEATURES.md  VISION.md
scripts/: README.md  backlog.py  features.py
specs/: CORE-001.md  RECORD-001.md
src/kakitori/: __init__.py  audio.py  cli.py  logging.py  models.py  (+3 more)
(+10 files in other folders)
