[project]
name = "kakitori"
version = "1.1.0"
description = "Audio transcription with speaker diarization using Deepgram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=5.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-mpv>=1.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
kakitori = "kakitori:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
